--- a/site/www/style.css
+++ b/site/www/style.css
@@ -40,17 +40,22 @@ table {
 	width: 100%;
 	background: #DDD;
 	border-spacing:1px;
+	table-layout: fixed;
 }
 
 th {
 	padding: 4px 8px;
 	box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.05);
 	text-shadow: 0 1px 0 #FFF;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 td {
 	padding: 4px 8px;
 	vertical-align: top;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 tbody tr {
