--- a/site/www/console/console.css
+++ b/site/www/console/console.css
@@ -1,5 +1,6 @@
 html {
 	height: 100%;
+	overflow: hidden;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
 	font-size  : 16px;
 	height     : 100%;
 	position   : relative;
+	overflow   : auto;
 }
 
 ::-moz-selection {
